Fix mobile painpoints spacing
- Increase top padding for painpoints section on mobile only
- Keep desktop layout unchanged
- Ensure video doesn't overlap text on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -412,8 +412,7 @@ body {
   padding-top: calc(25vh + 4rem);
 
   @include mobile {
-    padding-top: calc(15vh + 3rem);
-    padding: 4rem 0;
+    padding-top: calc(35vh + 4rem);
   }
 
   @include tablet {
